# claude-pane

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/install/: SKILL.md
.claude/skills/uninstall/: SKILL.md
.github/workflows/: ci.yml  release.yml
scripts/: claude-pane-hook.sh  pane-palette-hook.sh
src/: filter.rs  main.rs  render.rs  star.rs  state.rs  tests.rs
