[package]
name = "claude-pane"
version = "0.1.0"
edition = "2021"
authors = ["jiehoonk"]
description = "Zellij plugin for Claude Code session management"
license = "MIT"
autobins = false

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
zellij-tile = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
