[package]
name = "zellij-pane-palette"
version = "0.3.0"
edition = "2021"
authors = ["jiehoonk"]
description = "Zellij WASM plugin — AI pane palette with fuzzy search, bookmarks, and process display"
license = "MIT"

[dependencies]
zellij-tile = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
